// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Typography primitives > renders heading with default level 1`] = `
<DocumentFragment>
  <span
    class=""
    style="display: contents;"
  >
    <span
      class=" "
      style="display: contents;"
    >
      <span
        class=" t_dark is_Theme"
        style="color: var(--color); display: contents;"
      >
        <h1>
          Heading Title
        </h1>
        <div
          style="display: contents;"
        />
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`Typography primitives > renders text variations 1`] = `
<div>
  <span
    class=""
    style="display: contents;"
  >
    <span
      class=" "
      style="display: contents;"
    >
      <span
        class=" t_dark is_Theme"
        style="color: var(--color); display: contents;"
      >
        <span
          data-testid="body"
        >
          Body copy
        </span>
        <span
          data-testid="muted"
        >
          Muted copy
        </span>
        <span
          data-testid="lead"
        >
          Lead copy
        </span>
        <blockquote
          data-testid="quote"
        >
          Quote
        </blockquote>
        <div
          style="display: contents;"
        />
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</div>
`;
